2024-02-16  Mikael Magnusson  <mikachu@gmail.com>

	* 52546: Functions/Zle/incarg: incarg: avoid unneeded subshell

2024-02-15  Oliver Kiddle  <opk@zsh.org>

	* 52520: midchildan: Doc/Zsh/contrib.yo, Functions/Zle/incarg,
	Test/X05zleincarg.ztst: add new features and improvements to the
	"incarg" ZLE widget

	* github #112: Poncho: Completion/Unix/Command/_todo.sh:
	Completion: todo.sh uses shorthelp and not showhelp

	* 52535: Doc/Makefile.in, Doc/Zsh/prompt.yo, Doc/Zsh/zle.yo,
	Doc/Zsh/mod_hlgroup.yo, NEWS: documentation for highlight groups

	* 52533: Src/Modules/hlgroup.c, Src/Modules/hlgroup.mdd,
	Src/prompt.c: add module to provide alternate readonly views of
	the content of .zle.hlgroups

2024-02-09  Mikael Magnusson  <mikachu@gmail.com>

	* 52526: Src/Modules/terminfo.c: metafy terminfo capabilities

2024-02-04  Bart Schaefer  <schaefer@zsh.org>

	* unposted (cf. users/29635): Doc/Zsh/arith.yo: additional detail
	of parameter expansion in math context.

	* 52521: Etc/BUGS: mapfile handling of empty/unreadable files

2024-02-04  Mikael Magnusson  <mikachu@gmail.com>

	* 52516: Src/prompt.c: fix crash in %H when hlgroups is empty

	* 52517: Src/prompt.c: ensure that %H is followed by {

2024-02-03  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Util/printdefines: updates and fix omissions

 	* unposted: cf. Roman in users/29472: Functions/Misc/zslurp:
	Efficient lossless read of stdin into $REPLY

	* unposted: Src/Zle/zle_tricky.c, Src/parse.c, Src/pattern.c:
	Record as comments some notes about namespace usage exceptions.

	* 52513: Doc/Zsh/mod_private.yo, Src/Modules/param_private.c,
	Src/params.c, Test/v10private.ztst: nofork substitutions can
	use private parameters; fix crash bug on {privateFD}>&N; add
	tests and documentation

2024-01-28  Bart Schaefer  <schaefer@zsh.org>

	* 52510: Doc/Zsh/expn.yo, Doc/Zsh/mod_private.yo: document how
	${ ... } et al. affect use of "private"; add index entries
